[package]
name = "tank-conflict-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = { version = "0.14", default-features = false, features = ["tcp"] }
anyhow = "1.0.45"
log = "0.4.14"
env_logger = "0.9.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
argh = "0.1.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
rand = "0.8.4"
bitflags = "1.3.2"
